<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/two_color"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/nome_completo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/one_color"
        android:hint="@string/digite_seu_nome_completo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/sexo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/one_color"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClick"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClick"
                android:text="@string/feminino" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/e_mail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/one_color"
        android:hint="@string/digite_seu_e_mail"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/one_color"
        android:hint="@string/digite_seu_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/senha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@color/one_color"
        android:hint="@string/digite_sua_senha"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:text="@string/repita_a_senha" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="textPassword"
        android:background="@color/one_color"
        android:hint="@string/confirme_sua_senha"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/nacionalidade" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/one_color"
        android:hint="@string/informe_sua_nacionalidade"
        android:completionThreshold="1"
        android:id="@+id/autoCompleteNacionalidade"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/paddingTop"
        android:background="@color/three_color"
        android:textStyle="bold"
        android:text="@string/escolaridade" />

    <Spinner
        android:id="@+id/spinEscolaridades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:popupBackground="@color/button"
        android:background="@color/one_color"
        android:gravity="center"
        android:scrollbars="none"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/paddingTop"
        android:text="@string/cadastrar" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>